hphp/test/zend/bad/ext/zlib/tests/bug61139.php
<?php

gzopen('someFile', 'c');
?>
<?php error_reporting(0); ?>
<?php 
	unlink('someFile'); 
?>